--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,11 @@ bin-release/
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
 # information for Eclipse / Flash Builder.
+
+.env
+.idea
+/public/newUploads
+/public/.htaccess
+/public/nginx.htaccess
+/public/uploads
+/runtime/*
